# GameOfLife

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
shaders/: compute.frag  compute.vert  draw.frag  draw.vert
src/: GameOfLife.cpp  GameOfLife.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  game.cpp  game_gpu.cpp  main.cpp
